ran everything in order

--- a/final_project_report.ipynb
+++ b/final_project_report.ipynb
@@ -1576,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "id": "903386bd-2bdc-4e12-95d4-dfb12f3a5c95",
    "metadata": {
     "tags": []
@@ -1597,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "id": "92ba806a-9336-4cfc-8d3c-0efa55f06195",
    "metadata": {
     "tags": []
@@ -1607,59 +1607,59 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_e4901_row0_col0 {\n",
+       "#T_6c039_row0_col0 {\n",
        "  background-color: #08306b;\n",
        "  color: #f1f1f1;\n",
        "}\n",
-       "#T_e4901_row0_col1 {\n",
+       "#T_6c039_row0_col1 {\n",
        "  background-color: #b8d5ea;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_e4901_row1_col0 {\n",
+       "#T_6c039_row1_col0 {\n",
        "  background-color: #f7fbff;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_e4901_row1_col1 {\n",
+       "#T_6c039_row1_col1 {\n",
        "  background-color: #eaf2fb;\n",
        "  color: #000000;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_e4901\">\n",
+       "<table id=\"T_6c039\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_e4901_level0_col0\" class=\"col_heading level0 col0\" >Predicted 0</th>\n",
-       "      <th id=\"T_e4901_level0_col1\" class=\"col_heading level0 col1\" >Predicted 1</th>\n",
-       "      <th id=\"T_e4901_level0_col2\" class=\"col_heading level0 col2\" >Totals</th>\n",
+       "      <th id=\"T_6c039_level0_col0\" class=\"col_heading level0 col0\" >Predicted 0</th>\n",
+       "      <th id=\"T_6c039_level0_col1\" class=\"col_heading level0 col1\" >Predicted 1</th>\n",
+       "      <th id=\"T_6c039_level0_col2\" class=\"col_heading level0 col2\" >Totals</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_e4901_level0_row0\" class=\"row_heading level0 row0\" >Actual 0</th>\n",
-       "      <td id=\"T_e4901_row0_col0\" class=\"data row0 col0\" >616</td>\n",
-       "      <td id=\"T_e4901_row0_col1\" class=\"data row0 col1\" >187</td>\n",
-       "      <td id=\"T_e4901_row0_col2\" class=\"data row0 col2\" >803</td>\n",
+       "      <th id=\"T_6c039_level0_row0\" class=\"row_heading level0 row0\" >Actual 0</th>\n",
+       "      <td id=\"T_6c039_row0_col0\" class=\"data row0 col0\" >616</td>\n",
+       "      <td id=\"T_6c039_row0_col1\" class=\"data row0 col1\" >187</td>\n",
+       "      <td id=\"T_6c039_row0_col2\" class=\"data row0 col2\" >803</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_e4901_level0_row1\" class=\"row_heading level0 row1\" >Actual 1</th>\n",
-       "      <td id=\"T_e4901_row1_col0\" class=\"data row1 col0\" >7</td>\n",
-       "      <td id=\"T_e4901_row1_col1\" class=\"data row1 col1\" >48</td>\n",
-       "      <td id=\"T_e4901_row1_col2\" class=\"data row1 col2\" >55</td>\n",
+       "      <th id=\"T_6c039_level0_row1\" class=\"row_heading level0 row1\" >Actual 1</th>\n",
+       "      <td id=\"T_6c039_row1_col0\" class=\"data row1 col0\" >7</td>\n",
+       "      <td id=\"T_6c039_row1_col1\" class=\"data row1 col1\" >48</td>\n",
+       "      <td id=\"T_6c039_row1_col2\" class=\"data row1 col2\" >55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_e4901_level0_row2\" class=\"row_heading level0 row2\" >Totals</th>\n",
-       "      <td id=\"T_e4901_row2_col0\" class=\"data row2 col0\" >623</td>\n",
-       "      <td id=\"T_e4901_row2_col1\" class=\"data row2 col1\" >235</td>\n",
-       "      <td id=\"T_e4901_row2_col2\" class=\"data row2 col2\" >858</td>\n",
+       "      <th id=\"T_6c039_level0_row2\" class=\"row_heading level0 row2\" >Totals</th>\n",
+       "      <td id=\"T_6c039_row2_col0\" class=\"data row2 col0\" >623</td>\n",
+       "      <td id=\"T_6c039_row2_col1\" class=\"data row2 col1\" >235</td>\n",
+       "      <td id=\"T_6c039_row2_col2\" class=\"data row2 col2\" >858</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x155b3a090>"
+       "<pandas.io.formats.style.Styler at 0x15cffc910>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1674,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "5d800282-d889-476a-baca-31d7ce4fdd25",
    "metadata": {
     "tags": []
@@ -1739,303 +1739,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "id": "96f73a00-8ba2-467a-bd27-acb47e3d7839",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Feature</th>\n",
-       "      <th>Importance</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Num_Pregs</td>\n",
-       "      <td>0.317428</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Schiller</td>\n",
-       "      <td>0.291723</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>First_SI</td>\n",
-       "      <td>0.111436</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>HC (years)</td>\n",
-       "      <td>0.108625</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Age</td>\n",
-       "      <td>0.083337</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>HC_1.0</td>\n",
-       "      <td>0.033813</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>STD_num</td>\n",
-       "      <td>0.030186</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Num_SPs</td>\n",
-       "      <td>0.020178</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>IUD (years)</td>\n",
-       "      <td>0.003274</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Vulvo-Perineal Condylomatosis_Missing</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Syphilis_1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>Syphilis_Missing</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>Pelvic Inflammatory Disease_1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>Pelvic Inflammatory Disease_Missing</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>Genital Herpes_1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>Genital Herpes_Missing</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>Molluscum Contagiosum_1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>Molluscum Contagiosum_Missing</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Vaginal Condylomatosis_Missing</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>HIV_1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>HIV_Missing</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>Hepatitis B_1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>Hepatitis B_Missing</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>HPV_1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Vulvo-Perineal Condylomatosis_1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>STDs_Missing</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Vaginal Condylomatosis_1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Condylomatosis_Missing</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Condylomatosis_1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>STDs_1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>IUD_Missing</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>IUD_1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>HC_Missing</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Smokes_Missing</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Smokes_1.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Citology</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Hinselmann</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Dx</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Dx:HPV</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Dx:CIN</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Dx:Cancer</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>HPV_Missing</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                  Feature  Importance\n",
-       "3                               Num_Pregs    0.317428\n",
-       "12                               Schiller    0.291723\n",
-       "2                                First_SI    0.111436\n",
-       "4                              HC (years)    0.108625\n",
-       "0                                     Age    0.083337\n",
-       "16                                 HC_1.0    0.033813\n",
-       "6                                 STD_num    0.030186\n",
-       "1                                 Num_SPs    0.020178\n",
-       "5                             IUD (years)    0.003274\n",
-       "27  Vulvo-Perineal Condylomatosis_Missing    0.000000\n",
-       "28                           Syphilis_1.0    0.000000\n",
-       "29                       Syphilis_Missing    0.000000\n",
-       "30        Pelvic Inflammatory Disease_1.0    0.000000\n",
-       "31    Pelvic Inflammatory Disease_Missing    0.000000\n",
-       "32                     Genital Herpes_1.0    0.000000\n",
-       "33                 Genital Herpes_Missing    0.000000\n",
-       "34              Molluscum Contagiosum_1.0    0.000000\n",
-       "35          Molluscum Contagiosum_Missing    0.000000\n",
-       "25         Vaginal Condylomatosis_Missing    0.000000\n",
-       "36                                HIV_1.0    0.000000\n",
-       "37                            HIV_Missing    0.000000\n",
-       "38                        Hepatitis B_1.0    0.000000\n",
-       "39                    Hepatitis B_Missing    0.000000\n",
-       "40                                HPV_1.0    0.000000\n",
-       "26      Vulvo-Perineal Condylomatosis_1.0    0.000000\n",
-       "21                           STDs_Missing    0.000000\n",
-       "24             Vaginal Condylomatosis_1.0    0.000000\n",
-       "23                 Condylomatosis_Missing    0.000000\n",
-       "22                     Condylomatosis_1.0    0.000000\n",
-       "20                               STDs_1.0    0.000000\n",
-       "19                            IUD_Missing    0.000000\n",
-       "18                                IUD_1.0    0.000000\n",
-       "17                             HC_Missing    0.000000\n",
-       "15                         Smokes_Missing    0.000000\n",
-       "14                             Smokes_1.0    0.000000\n",
-       "13                               Citology    0.000000\n",
-       "11                             Hinselmann    0.000000\n",
-       "10                                     Dx    0.000000\n",
-       "9                                  Dx:HPV    0.000000\n",
-       "8                                  Dx:CIN    0.000000\n",
-       "7                               Dx:Cancer    0.000000\n",
-       "41                            HPV_Missing    0.000000"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Let's identify which features are important \n",
     "\n",
@@ -2050,7 +1759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "id": "1de659a3-c041-4e0a-adc7-6db2db169110",
    "metadata": {
     "tags": []
@@ -2144,7 +1853,7 @@
        "5   IUD (years)    0.003274"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2158,10 +1867,18 @@
    "id": "0114e8ff-43c8-42bc-8e7c-1400d0c5cffa",
    "metadata": {},
    "source": [
-    "Upon further research, I found that HPV, smoking, long-term use of birth control, and multiple pregnancies can heighten one's risk of cervical cancer. That being said, I find it fascinating that most of the feature variables hold little to no importance, especially the HPV and smoking. The model does, however, reflect this research in its values of number of pregnancies (`Num_Pregs`), hormonal contraceptives (`HC_1.0` and `HC (years` and `IUD (years)`). \n",
+    "Upon further research, I found that HPV, smoking, long-term use of birth control, and multiple pregnancies can heighten one's risk of cervical cancer. That being said, I find it fascinating that most of the feature variables hold little to no importance (all other features hold a 0.0 importance rate), especially the HPV and smoking. The model does, however, reflect this research in its values of number of pregnancies (`Num_Pregs`), hormonal contraceptives (`HC_1.0` and `HC (years` and `IUD (years)`). \n",
     "\n",
     "Other feature importances that seem intuitive to me are and the number of STDs (`STD_num`), number of sexual partners (`Num_SPs`), as that can increase your chance of STDs, and `Schiller`, which is a kind of test that detects dangers such as cervical cancer. I find it interesting that the Schiller test ended up having a higher impact than the other tests (Hinselmann and Citology)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bddeab8-68c3-4112-b9bc-1c9520973736",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
